--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,14 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env.dev
+.env.prod
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#firebase
+.firebase
+.firebaserc
+firebase.json
