--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "scripts": {
     "test": "jest",
     "eject": "react-scripts eject",
-    "start:dev": "REACT_APP_ENV=dev npm run _start",
-    "start:prod": "REACT_APP_ENV=prod npm run _start",
-    "deploy:dev": "REACT_APP_ENV=dev npm run _deploy",
-    "deploy:prod": "REACT_APP_ENV=prod npm run _deploy",
+    "start:dev": "cross-env REACT_APP_ENV=dev npm run _start",
+    "start:prod": "cross-env REACT_APP_ENV=prod npm run _start",
+    "deploy:dev": "cross-env REACT_APP_ENV=dev npm run _deploy",
+    "deploy:prod": "cross-env REACT_APP_ENV=prod npm run _deploy",
     "_start": "sh -ac '. .env.${REACT_APP_ENV}; craco start'",
     "_deploy": "sh -ac '. .env.${REACT_APP_ENV}; craco build && firebase use ${REACT_APP_ENV} && firebase deploy --only hosting:${REACT_APP_ENV}'"
   },
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.2",
     "craco-alias": "^3.0.1",
+    "cross-env": "^7.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0"
