SAB-25 윈도우즈에서 env 포함하는 스크립트가 동작하지 않는 문제 2

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "scripts": {
     "test": "jest",
-    "eject": "react-scripts   eject",
+    "eject": "react-scripts eject",
     "start:dev": "cross-env REACT_APP_ENV=dev npm run _start",
     "start:prod": "cross-env REACT_APP_ENV=prod npm run _start",
     "deploy:dev": "cross-env REACT_APP_ENV=dev npm run _deploy",
     "deploy:prod": "cross-env REACT_APP_ENV=prod npm run _deploy",
-    "_start": "sh -ac '. .env.${REACT_APP_ENV}; craco start'",
-    "_deploy": "sh -ac '. .env.${REACT_APP_ENV}; craco build && firebase use ${REACT_APP_ENV} && firebase deploy --only hosting:${REACT_APP_ENV}'"
+    "_start": "sh -ac \". .env.${REACT_APP_ENV}; craco start\"",
+    "_deploy": "sh -ac \". .env.${REACT_APP_ENV}; craco build && firebase use ${REACT_APP_ENV} && firebase deploy --only hosting:${REACT_APP_ENV}\""
   },
   "eslintConfig": {
     "extends": [
